<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DosMitades">

    <TextView
        android:id="@+id/dosMitades"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/Dos_mitades"
        android:textAlignment="center"
        android:background="@color/green"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/dosMitades"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/vector_back"
        android:backgroundTint="@color/green"/>

    <TextView
        android:id="@+id/TextUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/dosMitades"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/text_palabras"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/TextoDosMitades"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TextUsuario"
        app:layout_constraintVertical_bias="0.114" />



    <EditText
        android:id="@+id/enterText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Ingresa una cadena de caracteres"
        android:layout_marginTop="20dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_palabras" />

    <Button
        android:id="@+id/btSolucionDosMitades"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/solucionar"
        android:backgroundTint="@color/green"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enterText"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/Solucion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text=""
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btSolucionDosMitades"
        app:layout_constraintEnd_toEndOf="parent"/>




</androidx.constraintlayout.widget.ConstraintLayout>